Fixed a bug where the track table became to wide on mobile

--- a/angularclient/src/app/shared/track-table-data/track-table-data.component.scss
+++ b/angularclient/src/app/shared/track-table-data/track-table-data.component.scss
@@ -9,4 +9,5 @@ table td * {
 
 .mobile {
   padding-right: 0 0 0 2px !important;
+  word-break: break-all;
 }
